# openmbr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile  openmbr.sublime-project  openmbr.sublime-workspace
lib/: CMakeLists.txt
lib/arillumination/: .gitmodules  README.md  getAbsorptionCoefficient.m
lib/arillumination/@ARIllumination/: ARIllumination.m  Build_Fluence_Field.m  Build_Fluence_Volume.m  Compensate_1D.m  Get_Fluence_Field.m  Load_Fluence_Field.m  Read_From_File.m  Save_To_File.m  VPrintf.m
lib/arillumination/@ARIllumination/@eaDir/: ARIllumination.m@SynoResource
lib/arillumination/CUDA/: buildFluenceVolume.cu  buildFluenceVolume.mexa64  testBuildFluenceVolume.m
lib/arillumination/GUI/: CMakeLists.txt
lib/arillumination/GUI/lib/: CMakeLists.txt
lib/arillumination/GUI/lib/vtkwriter/: README.md  griddedData.cpp  griddedData.h  vtkwriter.cpp  vtkwriter.h
lib/arillumination/GUI/src/: CMakeLists.txt  fiberProperties.cpp  fiberProperties.h  interface.cu  interface.cuh  main.cu  mc.cu  mc.cuh  mcFieldProperties.cpp  mcFieldProperties.h  mc_toolbox.cu  optProperties.cpp  optProperties.h  simProperties.cpp  simProperties.h  structArgsIn.h
lib/arillumination/GUI/unit_tests/: gpuUnitTest.cu
lib/arillumination/Utility/: compOrArIll.m
lib/arillumination/mc_cuda/: calc_r.cpp  m_mc.cu  m_mc.mexa64  mc_toolbox.cpp  test_cuda.m  tiny_gpu  tiny_mc.cu  viz.m
src/: CMakeLists.txt  baseClass.cpp  baseClass.h  basicMathOp.cpp  basicMathOp.h  buildTransModel.cu  color_mapper.cpp  color_mapper.h  cudaErrorCheck.cu  cudaErrorCheck.cuh  defineNewTransducer.cpp  fieldProperties.cpp  fieldProperties.h  gaussian_beam.cpp  gaussian_beam.h  getMinMaxDist.cu  gpu_info.cpp  gpu_info.h  griddedData.cu  gui.cpp  gui.cu  gui.h  imgui_vtk.cpp  interface.cu  interface.cuh  main.cu  main_gui.cpp  mbr_transsym.cu  mbr_transsym.cuh  mbr_transsym_kernel.cu  mbrecon.cu  mbrecon.cuh  model.cpp  model.h  modelMatrix.cpp  modelMatrix.h  noise.cpp  noise.h  recon.cpp  recon.h  (+14 more)
unit_tests/: test_kernelspeed.cu  test_mbrecon.cu  test_transmodel.cu  test_volume.cpp  test_vtkexport.cpp
utests/: CMakeLists.txt  utest_kernelFwd.cpp  utest_kernelTrans.cpp  utest_model.cpp  utest_recon.cpp  utest_reconsettings.cpp
